--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
+    "contentlayer": "contentlayer2 build",
+    "dev": "contentlayer2 build & next dev --turbopack",
+    "build": "contentlayer2 build && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
@@ -23,9 +26,16 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "contentlayer": "^0.3.4",
+    "contentlayer2": "^0.5.8",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "next-contentlayer2": "^0.5.8",
     "postcss": "^8.5.6",
+    "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
