--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "build": "contentlayer2 build && next build",
     "start": "next start",
     "lint": "next lint",
-  "postinstall": "contentlayer2 build"
+    "postinstall": "contentlayer2 build"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
-    "next": "15.4.6",
+    "next": "^16.0.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -27,10 +27,10 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
-  "contentlayer2": "^0.5.8",
+    "contentlayer2": "^0.5.8",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-  "next-contentlayer2": "^0.5.8",
+    "next-contentlayer2": "^0.5.8",
     "postcss": "^8.5.6",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
